--- a/oClock.MVC/appsettings.json
+++ b/oClock.MVC/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "JiraDatabase": "User=SYSDBA;Password=masterkey;Database=/Data/JIRAANALYZER.FDB;DataSource=localhost;Port=3050;Dialect=3;"
+    "JiraDatabase": "Server=localhost;Database=\"C:\\Users\\m-grz\\Desktop\\oClock\\src\\oClock.MVC\\bin\\Debug\\net8.0\\Data\\JIRAANALYZER.FDB\";User=SYSDBA;Password=masterkey;"
   }
 }
